# HAYAT-v2.0

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.railway.yml  docker-compose.yml  fly.toml  netlify.toml  railway.toml  render.yaml  vercel.json
.github/workflows/: ci-cd.yml
backend/: .bandit  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  monitoring.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  minio.py  neo4j.py  opensearch.py  postgres.py  qdrant.py  redis.py
backend/app/graphql/: schema.py
backend/app/middleware/: __init__.py  enterprise.py
backend/app/models/: __init__.py  legal.py  practice_models.py
backend/app/schemas/: __init__.py  legal.py
backend/app/services/: __init__.py  ai_layer.py  analytics.py  document_acquisition.py  document_processor.py  editorial.py  knowledge_graph.py  legal_parser.py  rule_engine.py  search_engine.py  webhooks.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_parser.py  test_rule_engine.py  test_security.py
docs/: API.md  DISASTER_RECOVERY.md  SECURITY.md
frontend/: Dockerfile
infrastructure/helm/hayat/: values.yaml
infrastructure/render/: neo4j.Dockerfile  opensearch.Dockerfile
infrastructure/terraform/: main.tf
k8s/base/: api-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  worker-deployment.yaml
monitoring/: prometheus.yml
monitoring/grafana/datasources/: datasources.yml
scripts/backup/: backup.sh
sdk/: hayat_sdk.py  setup.py
