[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hayat-v2"
version = "2.0.0"
description = "Bangladesh Legal Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "HAYAT Legal Technologies", email = "dev@hayat.legal"}
]
keywords = ["legal", "bangladesh", "law", "ai", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "email-validator>=2.1.0",

    # Databases
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "neo4j>=5.21.0",
    "redis>=5.0.0",
    "qdrant-client>=1.9.0",
    "opensearch-py>=2.6.0",
    "minio>=7.2.0",

    # Search & AI
    "sentence-transformers>=3.0.0",
    "openai>=1.35.0",
    "anthropic>=0.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",

    # Document Processing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "pdfplumber>=0.11.0",
    "camelot-py[cv]>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",

    # Message Queue
    "aio-pika>=9.4.0",
    "celery>=5.4.0",

    # Validation & Utils
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dateutil>=2.9.0",
    "python-slugify>=8.0.0",
    "orjson>=3.10.0",
    "structlog>=24.2.0",
    "tenacity>=8.4.0",

    # Monitoring
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
